fix ReleaseInfoExtractor - code smells